update files location

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <title>Main</title>
 
 
@@ -57,20 +57,20 @@
             <h1 class="nickname">WORKS</h1>
             <div class="images">
                 <a href="portrait.html">
-                    <img src="../assets/images/project1.png" alt="project1">
+                    <img src="/assets/images/project1.png" alt="project1">
                 </a>
                 <a href="small-multiples.html">
-                    <img src="../assets/images/project2.png" alt="project2">
+                    <img src="/assets/images/project2.png" alt="project2">
                 </a>
                 <a href="sleeping-uncle.html">
-                    <img src="../assets/images/project3.png" alt="project3">
+                    <img src="/assets/images/project3.png" alt="project3">
                 </a>
 
             </div>
         </div>
 
     </section>
-    <script type="text/javascript" src="../index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
 </body>
 
 </html>
