--- a/sleeping-uncle.html
+++ b/sleeping-uncle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sleeping uncle</title>
     <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
-    <link href="../css/works.css" rel="stylesheet">
+    <link href="/css/works.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,17 +18,17 @@
 WE WERE DIVIDED INTO GROUPS, EACH RESPONSIBLE FOR A PARTICULAR PART. I DECIDED TO FOCUS ON WHAT I KNOW BEST AND CAN CREATE, WHICH IS GRAPHIC DESIGN. OUR GROUP WORKED ON VISUALS AND ANIMATIONS FOR THE GAME. OUR GRUMPY, PURPLE MONSTER UNCLE TURNED OUT REALLY COOL. ADDITIONALLY, WE CREATED POSTERS AND FLYERS TO PROMOTE THE GAME.
         </h1>
         <div class="monsters">
-            <img src="../assets/images/monster2.png" alt="sleeping-uncle">
-            <img src="../assets/images/monster1.png" alt="sleeping-uncle">
-            <img src="../assets/images/monster3.png" alt="sleeping-uncle">
+            <img src="/assets/images/monster2.png" alt="sleeping-uncle">
+            <img src="/assets/images/monster1.png" alt="sleeping-uncle">
+            <img src="/assets/images/monster3.png" alt="sleeping-uncle">
         </div>
    
     <h1 class="text">
         FLAYER WAS DESIGNED TO FOLD IN A COMPACT BROCHURE. I WORKED IN INDESIGN AND ILLUSTRATOR, SIZE OF A FLAYER, WHEN FOALDED IS A6, WHILE THE POSTER IS A3.   
     </h1>
     <div class="container2">
-        <img src="../assets/images/flayer.jpg" alt="sleeping-uncle">
-        <img src="../assets/images/project3.png" alt="sleeping-uncle">
+        <img src="/assets/images/flayer.jpg" alt="sleeping-uncle">
+        <img src="/assets/images/project3.png" alt="sleeping-uncle">
        
     </div>
 
