--- a/small-multiples.html
+++ b/small-multiples.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Small multiples</title>
     <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
-    <link href="../css/works.css" rel="stylesheet">
+    <link href="/css/works.css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             CONTROL THE RANDOMNESS WITHIN THE CODE.
         </h1>
         <div class="image-right">
-            <img src="../assets/images/project2.png" alt="small-multiples">
+            <img src="/assets/images/project2.png" alt="small-multiples">
         </div>
         <h1 class="text">
             BY ADJUSTING PARAMETERS, I COULD CREATE DIFFERENT VERSIONS OF A PATTERN, DISCOVERING BEAUTY IN ITS
@@ -30,10 +30,10 @@
             HERE ARE SOME EXAMPLES OF THE OUTCOMES I ACHIEVED BY ALTERING THE POSITIONS AND COLORS OF GEOMETRIC OBJECTS.
         </h1>
         <div class="container">
-            <img src="../assets/images/sm2.png" alt="small-multiples">
-            <img src="../assets/images/sm3.png" alt="small-multiples">
-            <img src="../assets/images/sm5.png" alt="small-multiples">
-            <img src="../assets/images/sm4.png" alt="small-multiples">
+            <img src="/assets/images/sm2.png" alt="small-multiples">
+            <img src="/assets/images/sm3.png" alt="small-multiples">
+            <img src="/assets/images/sm5.png" alt="small-multiples">
+            <img src="/assets/images/sm4.png" alt="small-multiples">
         </div>
     </section>
     <footer>
