--- a/portrait.html
+++ b/portrait.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
-    <link href="../css/works.css" rel="stylesheet">
+    <link href="/css/works.css" rel="stylesheet">
     <title>Portrait</title>
 </head>
 
@@ -24,7 +24,7 @@
             PORTRAIT I DID. MATH WAS NEVER MY FAVOURITE SUBJECT, AND TO BE HONEST I STRUGGLED.
         </h1>
         <div class="image-right">
-            <img src="../assets/images/portrait.png" alt="portrait">
+            <img src="/assets/images/portrait.png" alt="portrait">
         </div>
         <h1 class="text">
             WHILE I GAVE IT MY BEST SHOT, CREATING A PORTRAIT USING P5.JS WASN'T QUITE MY CUP OF TEA. AS SOMEONE WHO'S
@@ -41,7 +41,7 @@
             OTHER CREATIVE PURSUITS, WHERE I FEEL LESS STRESSED AND MORE FULFILLED. 
         </h1>
         <div>
-            <img src="../assets/images/project1.png" alt="portrait">
+            <img src="/assets/images/project1.png" alt="portrait">
         </div>
     </section>
     <footer>
